feat: Migrate WinGet from CLI to COM API for improved reliability
Replace CLI-based WinGet operations with Windows Package Manager COM API integration, providing more reliable package management and installation status detection.

Key changes - Add WindowsPackageManager.Interop project for COM API access - Refactor WinGetService to use COM API instead of parsing CLI output - Add GetInstalledPackageIdsAsync() for efficient package detection - Simplify AppStatusDiscoveryService with COM-based package lookups - Add registry key name fallback for apps not detected via WinGet - Remove obsolete WinGetOutputParser (no longer needed) - Update target framework to net9.0-windows10.0.19041.0 - Rename browser apps to full names (Mozilla Firefox, Google Chrome) - Add localization strings for COM API error handling

COM API integration based on github.com/marticliment/WinGet-API-from-CSharp

--- a/src/Winhance.WPF/Localization/af.json
+++ b/src/Winhance.WPF/Localization/af.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "WinGet is reeds op datum",
   "Progress_WinGet_InstalledLatest": "WinGet is reeds geïnstalleer by die nuutste weergawe",
   "Progress_WinGet_Ready": "WinGet is gereed",
+  "Progress_Uninstalling": "Deïnstalleer {0}...",
+  "Progress_Finalizing": "Finaliseer...",
+  "Progress_Processing": "Verwerk {0}...",
+  "Progress_WinGet_DownloadingDependencies": "Laai WinGet-afhanklikhede af...",
+  "Progress_WinGet_DownloadingInstaller": "Laai WinGet-installeerder af...",
+  "Progress_WinGet_DownloadingLicense": "Laai lisensie af...",
+  "Progress_WinGet_ExtractingDependencies": "Pak afhanklikhede uit...",
+  "Progress_WinGet_InstallingMachineWide": "Installeer WinGet (masjien-wyd)...",
+  "Progress_WinGet_InstallCancelled": "Installasie gekanselleer",
+  "Progress_WinGet_OpeningDismSession": "Open DISM-sessie...",
+  "Progress_WinGet_Provisioning": "Voorsien WinGet-pakket...",
+  "Progress_WinGet_ProvisionedSuccessfully": "WinGet suksesvol voorsien",
+  "Progress_WinGet_Error_BlockedByPolicy": "Installasie van '{0}' word deur stelselbeleid geblokkeer.",
+  "Progress_WinGet_Error_CatalogError": "Katalogus-fout tydens installasie van '{0}'. Probeer asseblief weer.",
+  "Progress_WinGet_Error_InternalError": "Interne fout tydens installasie van '{0}'. Probeer asseblief weer.",
+  "Progress_WinGet_Error_InvalidOptions": "Ongeldige opsies gespesifiseer vir installasie van '{0}'.",
+  "Progress_WinGet_Error_DownloadError": "Aflaai-fout tydens installasie van '{0}'. Kontroleer asseblief jou internetverbinding.",
+  "Progress_WinGet_Error_InstallError": "Installasie-fout vir '{0}'. Foutkode: {1}",
+  "Progress_WinGet_Error_ManifestError": "Pakket-manifes fout vir '{0}'.",
+  "Progress_WinGet_Error_NoApplicableInstallers": "Geen toepaslike installeerders gevind vir '{0}' op hierdie stelsel nie.",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "Geen toepaslike opgradering gevind vir '{0}' nie.",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "Pakketooreenkomste nie aanvaar vir '{0}' nie.",
+  "Progress_WinGet_Error_InstallFailed": "Installasie misluk vir '{0}'. Status: {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "Deïnstallasie van '{0}' word deur stelselbeleid geblokkeer.",
+  "Progress_WinGet_Error_UninstallCatalogError": "Katalogus-fout tydens deïnstallasie van '{0}'.",
+  "Progress_WinGet_Error_UninstallInternalError": "Interne fout tydens deïnstallasie van '{0}'.",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "Ongeldige opsies gespesifiseer vir deïnstallasie van '{0}'.",
+  "Progress_WinGet_Error_UninstallError": "Deïnstallasie-fout vir '{0}'. Foutkode: {1}",
+  "Progress_WinGet_Error_UninstallFailed": "Deïnstallasie misluk vir '{0}'. Status: {1}",
+  "Progress_WinGet_PackageNotFound": "Pakket '{0}' nie in bewaarplekke gevind nie.",
+  "Progress_WinGet_FoundPackage": "Pakket gevind: {0}",
+  "Progress_WinGet_PackageNotInstalled": "Pakket '{0}' nie gevind of nie geïnstalleer nie.",
   "Progress_DeletingImageFile": "Vee beeldlêer uit...",
   "Progress_ImageFileDeleted": "Beeldlêer suksesvol uitgevee",
   "Progress_ImageFileDeletionFailed": "Kon nie beeldlêer uitvee nie",
