--- a/src/Winhance.WPF/Localization/cs.json
+++ b/src/Winhance.WPF/Localization/cs.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "WinGet je již aktuální",
   "Progress_WinGet_InstalledLatest": "WinGet je již nainstalován v nejnovější verzi",
   "Progress_WinGet_Ready": "WinGet je připraven",
+  "Progress_Uninstalling": "Odinstalování {0}...",
+  "Progress_Finalizing": "Dokončování...",
+  "Progress_Processing": "Zpracování {0}...",
+  "Progress_WinGet_DownloadingDependencies": "Stahování závislostí WinGet...",
+  "Progress_WinGet_DownloadingInstaller": "Stahování instalátoru WinGet...",
+  "Progress_WinGet_DownloadingLicense": "Stahování licence...",
+  "Progress_WinGet_ExtractingDependencies": "Rozbalování závislostí...",
+  "Progress_WinGet_InstallingMachineWide": "Instalace WinGet (celý systém)...",
+  "Progress_WinGet_InstallCancelled": "Instalace zrušena",
+  "Progress_WinGet_OpeningDismSession": "Otevírání relace DISM...",
+  "Progress_WinGet_Provisioning": "Zřizování balíčku WinGet...",
+  "Progress_WinGet_ProvisionedSuccessfully": "WinGet úspěšně zřízen",
+  "Progress_WinGet_Error_BlockedByPolicy": "Instalace '{0}' je blokována systémovou zásadou.",
+  "Progress_WinGet_Error_CatalogError": "Chyba katalogu při instalaci '{0}'. Zkuste to prosím znovu.",
+  "Progress_WinGet_Error_InternalError": "Interní chyba při instalaci '{0}'. Zkuste to prosím znovu.",
+  "Progress_WinGet_Error_InvalidOptions": "Neplatné možnosti zadané pro instalaci '{0}'.",
+  "Progress_WinGet_Error_DownloadError": "Chyba stahování při instalaci '{0}'. Zkontrolujte prosím připojení k internetu.",
+  "Progress_WinGet_Error_InstallError": "Chyba instalace '{0}'. Kód chyby: {1}",
+  "Progress_WinGet_Error_ManifestError": "Chyba manifestu balíčku '{0}'.",
+  "Progress_WinGet_Error_NoApplicableInstallers": "Pro '{0}' nebyly nalezeny žádné použitelné instalátory.",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "Pro '{0}' nebyl nalezen žádný použitelný upgrade.",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "Smlouvy balíčku nebyly přijaty pro '{0}'.",
+  "Progress_WinGet_Error_InstallFailed": "Instalace selhala pro '{0}'. Stav: {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "Odinstalace '{0}' je blokována systémovou zásadou.",
+  "Progress_WinGet_Error_UninstallCatalogError": "Chyba katalogu při odinstalaci '{0}'.",
+  "Progress_WinGet_Error_UninstallInternalError": "Interní chyba při odinstalaci '{0}'.",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "Neplatné možnosti zadané pro odinstalaci '{0}'.",
+  "Progress_WinGet_Error_UninstallError": "Chyba odinstalace '{0}'. Kód chyby: {1}",
+  "Progress_WinGet_Error_UninstallFailed": "Odinstalace selhala pro '{0}'. Stav: {1}",
+  "Progress_WinGet_PackageNotFound": "Balíček '{0}' nebyl nalezen v repozitářích.",
+  "Progress_WinGet_FoundPackage": "Nalezen balíček: {0}",
+  "Progress_WinGet_PackageNotInstalled": "Balíček '{0}' nebyl nalezen nebo není nainstalován.",
   "Progress_DeletingImageFile": "Odstraňování souboru obrazu...",
   "Progress_ImageFileDeleted": "Soubor obrazu byl úspěšně odstraněn",
   "Progress_ImageFileDeletionFailed": "Odstranění souboru obrazu se nezdařilo",
