--- a/src/Winhance.WPF/Localization/de.json
+++ b/src/Winhance.WPF/Localization/de.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "WinGet ist bereits auf dem neuesten Stand",
   "Progress_WinGet_InstalledLatest": "WinGet ist bereits in der neuesten Version installiert",
   "Progress_WinGet_Ready": "WinGet ist bereit",
+  "Progress_Uninstalling": "Deinstalliere {0}...",
+  "Progress_Finalizing": "Finalisiere...",
+  "Progress_Processing": "Verarbeite {0}...",
+  "Progress_WinGet_DownloadingDependencies": "Lade WinGet-Abhängigkeiten herunter...",
+  "Progress_WinGet_DownloadingInstaller": "Lade WinGet-Installer herunter...",
+  "Progress_WinGet_DownloadingLicense": "Lade Lizenz herunter...",
+  "Progress_WinGet_ExtractingDependencies": "Extrahiere Abhängigkeiten...",
+  "Progress_WinGet_InstallingMachineWide": "Installiere WinGet (systemweit)...",
+  "Progress_WinGet_InstallCancelled": "Installation abgebrochen",
+  "Progress_WinGet_OpeningDismSession": "Öffne DISM-Sitzung...",
+  "Progress_WinGet_Provisioning": "Stelle WinGet-Paket bereit...",
+  "Progress_WinGet_ProvisionedSuccessfully": "WinGet erfolgreich bereitgestellt",
+  "Progress_WinGet_Error_BlockedByPolicy": "Installation von '{0}' wird durch Systemrichtlinie blockiert.",
+  "Progress_WinGet_Error_CatalogError": "Katalogfehler bei der Installation von '{0}'. Bitte erneut versuchen.",
+  "Progress_WinGet_Error_InternalError": "Interner Fehler bei der Installation von '{0}'. Bitte erneut versuchen.",
+  "Progress_WinGet_Error_InvalidOptions": "Ungültige Optionen für die Installation von '{0}' angegeben.",
+  "Progress_WinGet_Error_DownloadError": "Download-Fehler bei der Installation von '{0}'. Bitte Internetverbindung prüfen.",
+  "Progress_WinGet_Error_InstallError": "Installationsfehler für '{0}'. Fehlercode: {1}",
+  "Progress_WinGet_Error_ManifestError": "Paketmanifest-Fehler für '{0}'.",
+  "Progress_WinGet_Error_NoApplicableInstallers": "Keine geeigneten Installer für '{0}' auf diesem System gefunden.",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "Kein geeignetes Upgrade für '{0}' gefunden.",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "Paketvereinbarungen für '{0}' nicht akzeptiert.",
+  "Progress_WinGet_Error_InstallFailed": "Installation fehlgeschlagen für '{0}'. Status: {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "Deinstallation von '{0}' wird durch Systemrichtlinie blockiert.",
+  "Progress_WinGet_Error_UninstallCatalogError": "Katalogfehler bei der Deinstallation von '{0}'.",
+  "Progress_WinGet_Error_UninstallInternalError": "Interner Fehler bei der Deinstallation von '{0}'.",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "Ungültige Optionen für die Deinstallation von '{0}' angegeben.",
+  "Progress_WinGet_Error_UninstallError": "Deinstallationsfehler für '{0}'. Fehlercode: {1}",
+  "Progress_WinGet_Error_UninstallFailed": "Deinstallation fehlgeschlagen für '{0}'. Status: {1}",
+  "Progress_WinGet_PackageNotFound": "Paket '{0}' nicht in Repositories gefunden.",
+  "Progress_WinGet_FoundPackage": "Paket gefunden: {0}",
+  "Progress_WinGet_PackageNotInstalled": "Paket '{0}' nicht gefunden oder nicht installiert.",
   "Progress_DeletingImageFile": "Bilddatei wird gelöscht...",
   "Progress_ImageFileDeleted": "Bilddatei erfolgreich gelöscht",
   "Progress_ImageFileDeletionFailed": "Löschen der Bilddatei fehlgeschlagen",
