--- a/src/Winhance.WPF/Localization/el.json
+++ b/src/Winhance.WPF/Localization/el.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "Το WinGet είναι ήδη ενημερωμένο",
   "Progress_WinGet_InstalledLatest": "Το WinGet είναι ήδη εγκατεστημένο στην τελευταία έκδοση",
   "Progress_WinGet_Ready": "Το WinGet είναι έτοιμο",
+  "Progress_Uninstalling": "Απεγκατάσταση {0}...",
+  "Progress_Finalizing": "Ολοκλήρωση...",
+  "Progress_Processing": "Επεξεργασία {0}...",
+  "Progress_WinGet_DownloadingDependencies": "Λήψη εξαρτήσεων WinGet...",
+  "Progress_WinGet_DownloadingInstaller": "Λήψη προγράμματος εγκατάστασης WinGet...",
+  "Progress_WinGet_DownloadingLicense": "Λήψη άδειας...",
+  "Progress_WinGet_ExtractingDependencies": "Εξαγωγή εξαρτήσεων...",
+  "Progress_WinGet_InstallingMachineWide": "Εγκατάσταση WinGet (σε επίπεδο συστήματος)...",
+  "Progress_WinGet_InstallCancelled": "Η εγκατάσταση ακυρώθηκε",
+  "Progress_WinGet_OpeningDismSession": "Άνοιγμα συνεδρίας DISM...",
+  "Progress_WinGet_Provisioning": "Παροχή πακέτου WinGet...",
+  "Progress_WinGet_ProvisionedSuccessfully": "Το WinGet παρασχέθηκε επιτυχώς",
+  "Progress_WinGet_Error_BlockedByPolicy": "Η εγκατάσταση του '{0}' αποκλείστηκε από την πολιτική συστήματος.",
+  "Progress_WinGet_Error_CatalogError": "Σφάλμα καταλόγου κατά την εγκατάσταση του '{0}'. Παρακαλώ δοκιμάστε ξανά.",
+  "Progress_WinGet_Error_InternalError": "Εσωτερικό σφάλμα κατά την εγκατάσταση του '{0}'. Παρακαλώ δοκιμάστε ξανά.",
+  "Progress_WinGet_Error_InvalidOptions": "Μη έγκυρες επιλογές για την εγκατάσταση του '{0}'.",
+  "Progress_WinGet_Error_DownloadError": "Σφάλμα λήψης κατά την εγκατάσταση του '{0}'. Ελέγξτε τη σύνδεση στο διαδίκτυο.",
+  "Progress_WinGet_Error_InstallError": "Σφάλμα εγκατάστασης για '{0}'. Κωδικός σφάλματος: {1}",
+  "Progress_WinGet_Error_ManifestError": "Σφάλμα manifest πακέτου για '{0}'.",
+  "Progress_WinGet_Error_NoApplicableInstallers": "Δεν βρέθηκαν κατάλληλα προγράμματα εγκατάστασης για '{0}' σε αυτό το σύστημα.",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "Δεν βρέθηκε κατάλληλη αναβάθμιση για '{0}'.",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "Οι συμφωνίες πακέτου δεν έγιναν αποδεκτές για '{0}'.",
+  "Progress_WinGet_Error_InstallFailed": "Η εγκατάσταση απέτυχε για '{0}'. Κατάσταση: {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "Η απεγκατάσταση του '{0}' αποκλείστηκε από την πολιτική συστήματος.",
+  "Progress_WinGet_Error_UninstallCatalogError": "Σφάλμα καταλόγου κατά την απεγκατάσταση του '{0}'.",
+  "Progress_WinGet_Error_UninstallInternalError": "Εσωτερικό σφάλμα κατά την απεγκατάσταση του '{0}'.",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "Μη έγκυρες επιλογές για την απεγκατάσταση του '{0}'.",
+  "Progress_WinGet_Error_UninstallError": "Σφάλμα απεγκατάστασης για '{0}'. Κωδικός σφάλματος: {1}",
+  "Progress_WinGet_Error_UninstallFailed": "Η απεγκατάσταση απέτυχε για '{0}'. Κατάσταση: {1}",
+  "Progress_WinGet_PackageNotFound": "Το πακέτο '{0}' δεν βρέθηκε στα αποθετήρια.",
+  "Progress_WinGet_FoundPackage": "Βρέθηκε πακέτο: {0}",
+  "Progress_WinGet_PackageNotInstalled": "Το πακέτο '{0}' δεν βρέθηκε ή δεν είναι εγκατεστημένο.",
   "Progress_DeletingImageFile": "Διαγραφή αρχείου εικόνας...",
   "Progress_ImageFileDeleted": "Το αρχείο εικόνας διαγράφηκε με επιτυχία",
   "Progress_ImageFileDeletionFailed": "Η διαγραφή του αρχείου εικόνας απέτυχε",
