--- a/src/Winhance.WPF/Localization/en.json
+++ b/src/Winhance.WPF/Localization/en.json
@@ -1349,8 +1349,11 @@
   "Progress_WinGet_UninstallationCancelled": "Uninstallation of {0} was cancelled",
   "Progress_WinGet_UninstallationError": "Error uninstalling {0}: {1}",
   "Progress_WinGet_Installing": "Installing WinGet...",
+  "Progress_WinGet_CheckingExisting": "Checking for existing WinGet package...",
+  "Progress_WinGet_ProvisioningExisting": "Provisioning existing WinGet package...",
   "Progress_WinGet_InstallFailed": "Failed to install WinGet",
   "Progress_WinGet_VerifyingInstallation": "Verifying WinGet installation...",
+  "Progress_WinGet_WaitingForRegistration": "Waiting for WinGet COM registration...",
   "Progress_WinGet_VerificationFailed": "WinGet installation verification failed",
   "Progress_WinGet_InstalledNotAccessible": "WinGet installed but not accessible. Please restart the application.",
   "Progress_WinGet_InitializingSources": "Initializing WinGet sources...",
@@ -1381,6 +1384,38 @@
   "Progress_WinGet_AlreadyUpToDate": "WinGet is already up to date",
   "Progress_WinGet_InstalledLatest": "WinGet is already installed at latest version",
   "Progress_WinGet_Ready": "WinGet is ready",
+  "Progress_Uninstalling": "Uninstalling {0}...",
+  "Progress_Finalizing": "Finalizing...",
+  "Progress_Processing": "Processing {0}...",
+  "Progress_WinGet_DownloadingDependencies": "Downloading WinGet dependencies...",
+  "Progress_WinGet_DownloadingInstaller": "Downloading WinGet installer...",
+  "Progress_WinGet_DownloadingLicense": "Downloading license...",
+  "Progress_WinGet_ExtractingDependencies": "Extracting dependencies...",
+  "Progress_WinGet_InstallingMachineWide": "Installing WinGet (machine-wide)...",
+  "Progress_WinGet_InstallCancelled": "Installation cancelled",
+  "Progress_WinGet_OpeningDismSession": "Opening DISM session...",
+  "Progress_WinGet_Provisioning": "Provisioning WinGet package...",
+  "Progress_WinGet_ProvisionedSuccessfully": "WinGet provisioned successfully",
+  "Progress_WinGet_Error_BlockedByPolicy": "Installation of '{0}' is blocked by system policy.",
+  "Progress_WinGet_Error_CatalogError": "Catalog error while installing '{0}'. Please try again.",
+  "Progress_WinGet_Error_InternalError": "Internal error while installing '{0}'. Please try again.",
+  "Progress_WinGet_Error_InvalidOptions": "Invalid options specified for installing '{0}'.",
+  "Progress_WinGet_Error_DownloadError": "Download error while installing '{0}'. Please check your internet connection.",
+  "Progress_WinGet_Error_InstallError": "Installation error for '{0}'. Error code: {1}",
+  "Progress_WinGet_Error_ManifestError": "Package manifest error for '{0}'.",
+  "Progress_WinGet_Error_NoApplicableInstallers": "No applicable installers found for '{0}' on this system.",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "No applicable upgrade found for '{0}'.",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "Package agreements not accepted for '{0}'.",
+  "Progress_WinGet_Error_InstallFailed": "Installation failed for '{0}'. Status: {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "Uninstallation of '{0}' is blocked by system policy.",
+  "Progress_WinGet_Error_UninstallCatalogError": "Catalog error while uninstalling '{0}'.",
+  "Progress_WinGet_Error_UninstallInternalError": "Internal error while uninstalling '{0}'.",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "Invalid options specified for uninstalling '{0}'.",
+  "Progress_WinGet_Error_UninstallError": "Uninstallation error for '{0}'. Error code: {1}",
+  "Progress_WinGet_Error_UninstallFailed": "Uninstallation failed for '{0}'. Status: {1}",
+  "Progress_WinGet_PackageNotFound": "Package '{0}' not found in repositories.",
+  "Progress_WinGet_FoundPackage": "Found package: {0}",
+  "Progress_WinGet_PackageNotInstalled": "Package '{0}' not found or not installed.",
   "Progress_DeletingImageFile": "Deleting image file...",
   "Progress_ImageFileDeleted": "Image file deleted successfully",
   "Progress_ImageFileDeletionFailed": "Failed to delete image file",
