--- a/src/Winhance.WPF/Localization/es.json
+++ b/src/Winhance.WPF/Localization/es.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "WinGet ya está actualizado",
   "Progress_WinGet_InstalledLatest": "WinGet ya está instalado en la última versión",
   "Progress_WinGet_Ready": "WinGet está listo",
+  "Progress_Uninstalling": "Desinstalando {0}...",
+  "Progress_Finalizing": "Finalizando...",
+  "Progress_Processing": "Procesando {0}...",
+  "Progress_WinGet_DownloadingDependencies": "Descargando dependencias de WinGet...",
+  "Progress_WinGet_DownloadingInstaller": "Descargando instalador de WinGet...",
+  "Progress_WinGet_DownloadingLicense": "Descargando licencia...",
+  "Progress_WinGet_ExtractingDependencies": "Extrayendo dependencias...",
+  "Progress_WinGet_InstallingMachineWide": "Instalando WinGet (en todo el sistema)...",
+  "Progress_WinGet_InstallCancelled": "Instalación cancelada",
+  "Progress_WinGet_OpeningDismSession": "Abriendo sesión DISM...",
+  "Progress_WinGet_Provisioning": "Aprovisionando paquete WinGet...",
+  "Progress_WinGet_ProvisionedSuccessfully": "WinGet aprovisionado correctamente",
+  "Progress_WinGet_Error_BlockedByPolicy": "La instalación de '{0}' está bloqueada por la directiva del sistema.",
+  "Progress_WinGet_Error_CatalogError": "Error de catálogo al instalar '{0}'. Por favor, inténtelo de nuevo.",
+  "Progress_WinGet_Error_InternalError": "Error interno al instalar '{0}'. Por favor, inténtelo de nuevo.",
+  "Progress_WinGet_Error_InvalidOptions": "Opciones no válidas especificadas para instalar '{0}'.",
+  "Progress_WinGet_Error_DownloadError": "Error de descarga al instalar '{0}'. Compruebe su conexión a Internet.",
+  "Progress_WinGet_Error_InstallError": "Error de instalación para '{0}'. Código de error: {1}",
+  "Progress_WinGet_Error_ManifestError": "Error de manifiesto del paquete para '{0}'.",
+  "Progress_WinGet_Error_NoApplicableInstallers": "No se encontraron instaladores aplicables para '{0}' en este sistema.",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "No se encontró una actualización aplicable para '{0}'.",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "Los acuerdos del paquete no fueron aceptados para '{0}'.",
+  "Progress_WinGet_Error_InstallFailed": "La instalación falló para '{0}'. Estado: {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "La desinstalación de '{0}' está bloqueada por la directiva del sistema.",
+  "Progress_WinGet_Error_UninstallCatalogError": "Error de catálogo al desinstalar '{0}'.",
+  "Progress_WinGet_Error_UninstallInternalError": "Error interno al desinstalar '{0}'.",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "Opciones no válidas especificadas para desinstalar '{0}'.",
+  "Progress_WinGet_Error_UninstallError": "Error de desinstalación para '{0}'. Código de error: {1}",
+  "Progress_WinGet_Error_UninstallFailed": "La desinstalación falló para '{0}'. Estado: {1}",
+  "Progress_WinGet_PackageNotFound": "Paquete '{0}' no encontrado en los repositorios.",
+  "Progress_WinGet_FoundPackage": "Paquete encontrado: {0}",
+  "Progress_WinGet_PackageNotInstalled": "Paquete '{0}' no encontrado o no instalado.",
   "Progress_DeletingImageFile": "Eliminando archivo de imagen...",
   "Progress_ImageFileDeleted": "Archivo de imagen eliminado correctamente",
   "Progress_ImageFileDeletionFailed": "Error al eliminar el archivo de imagen",
