--- a/src/Winhance.WPF/Localization/fr.json
+++ b/src/Winhance.WPF/Localization/fr.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "WinGet est déjà à jour",
   "Progress_WinGet_InstalledLatest": "WinGet est déjà installé dans sa dernière version",
   "Progress_WinGet_Ready": "WinGet est prêt",
+  "Progress_Uninstalling": "Désinstallation de {0}...",
+  "Progress_Finalizing": "Finalisation...",
+  "Progress_Processing": "Traitement de {0}...",
+  "Progress_WinGet_DownloadingDependencies": "Téléchargement des dépendances WinGet...",
+  "Progress_WinGet_DownloadingInstaller": "Téléchargement de l'installateur WinGet...",
+  "Progress_WinGet_DownloadingLicense": "Téléchargement de la licence...",
+  "Progress_WinGet_ExtractingDependencies": "Extraction des dépendances...",
+  "Progress_WinGet_InstallingMachineWide": "Installation de WinGet (à l'échelle du système)...",
+  "Progress_WinGet_InstallCancelled": "Installation annulée",
+  "Progress_WinGet_OpeningDismSession": "Ouverture de la session DISM...",
+  "Progress_WinGet_Provisioning": "Approvisionnement du paquet WinGet...",
+  "Progress_WinGet_ProvisionedSuccessfully": "WinGet approvisionné avec succès",
+  "Progress_WinGet_Error_BlockedByPolicy": "L'installation de '{0}' est bloquée par la stratégie système.",
+  "Progress_WinGet_Error_CatalogError": "Erreur de catalogue lors de l'installation de '{0}'. Veuillez réessayer.",
+  "Progress_WinGet_Error_InternalError": "Erreur interne lors de l'installation de '{0}'. Veuillez réessayer.",
+  "Progress_WinGet_Error_InvalidOptions": "Options non valides spécifiées pour l'installation de '{0}'.",
+  "Progress_WinGet_Error_DownloadError": "Erreur de téléchargement lors de l'installation de '{0}'. Vérifiez votre connexion Internet.",
+  "Progress_WinGet_Error_InstallError": "Erreur d'installation pour '{0}'. Code d'erreur : {1}",
+  "Progress_WinGet_Error_ManifestError": "Erreur de manifeste du paquet pour '{0}'.",
+  "Progress_WinGet_Error_NoApplicableInstallers": "Aucun installateur applicable trouvé pour '{0}' sur ce système.",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "Aucune mise à niveau applicable trouvée pour '{0}'.",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "Les accords du paquet n'ont pas été acceptés pour '{0}'.",
+  "Progress_WinGet_Error_InstallFailed": "L'installation a échoué pour '{0}'. Statut : {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "La désinstallation de '{0}' est bloquée par la stratégie système.",
+  "Progress_WinGet_Error_UninstallCatalogError": "Erreur de catalogue lors de la désinstallation de '{0}'.",
+  "Progress_WinGet_Error_UninstallInternalError": "Erreur interne lors de la désinstallation de '{0}'.",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "Options non valides spécifiées pour la désinstallation de '{0}'.",
+  "Progress_WinGet_Error_UninstallError": "Erreur de désinstallation pour '{0}'. Code d'erreur : {1}",
+  "Progress_WinGet_Error_UninstallFailed": "La désinstallation a échoué pour '{0}'. Statut : {1}",
+  "Progress_WinGet_PackageNotFound": "Paquet '{0}' non trouvé dans les dépôts.",
+  "Progress_WinGet_FoundPackage": "Paquet trouvé : {0}",
+  "Progress_WinGet_PackageNotInstalled": "Paquet '{0}' non trouvé ou non installé.",
   "Progress_DeletingImageFile": "Suppression du fichier image...",
   "Progress_ImageFileDeleted": "Fichier image supprimé avec succès",
   "Progress_ImageFileDeletionFailed": "Échec de la suppression du fichier image",
