--- a/src/Winhance.WPF/Localization/hi.json
+++ b/src/Winhance.WPF/Localization/hi.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "WinGet पहले से ही अपडेट है",
   "Progress_WinGet_InstalledLatest": "WinGet पहले से ही नवीनतम संस्करण में इंस्टॉल है",
   "Progress_WinGet_Ready": "WinGet तैयार है",
+  "Progress_Uninstalling": "अनइंस्टॉल किया जा रहा है {0}...",
+  "Progress_Finalizing": "पूर्ण किया जा रहा है...",
+  "Progress_Processing": "प्रोसेस किया जा रहा है {0}...",
+  "Progress_WinGet_DownloadingDependencies": "WinGet निर्भरताएं डाउनलोड हो रही हैं...",
+  "Progress_WinGet_DownloadingInstaller": "WinGet इंस्टॉलर डाउनलोड हो रहा है...",
+  "Progress_WinGet_DownloadingLicense": "लाइसेंस डाउनलोड हो रहा है...",
+  "Progress_WinGet_ExtractingDependencies": "निर्भरताएं निकाली जा रही हैं...",
+  "Progress_WinGet_InstallingMachineWide": "WinGet इंस्टॉल हो रहा है (मशीन-व्यापी)...",
+  "Progress_WinGet_InstallCancelled": "इंस्टॉलेशन रद्द किया गया",
+  "Progress_WinGet_OpeningDismSession": "DISM सत्र खोला जा रहा है...",
+  "Progress_WinGet_Provisioning": "WinGet पैकेज प्रोविजन हो रहा है...",
+  "Progress_WinGet_ProvisionedSuccessfully": "WinGet सफलतापूर्वक प्रोविजन किया गया",
+  "Progress_WinGet_Error_BlockedByPolicy": "'{0}' का इंस्टॉलेशन सिस्टम पॉलिसी द्वारा अवरुद्ध है।",
+  "Progress_WinGet_Error_CatalogError": "'{0}' इंस्टॉल करते समय कैटलॉग त्रुटि। कृपया पुनः प्रयास करें।",
+  "Progress_WinGet_Error_InternalError": "'{0}' इंस्टॉल करते समय आंतरिक त्रुटि। कृपया पुनः प्रयास करें।",
+  "Progress_WinGet_Error_InvalidOptions": "'{0}' इंस्टॉल करने के लिए अमान्य विकल्प निर्दिष्ट किए गए।",
+  "Progress_WinGet_Error_DownloadError": "'{0}' इंस्टॉल करते समय डाउनलोड त्रुटि। कृपया अपना इंटरनेट कनेक्शन जांचें।",
+  "Progress_WinGet_Error_InstallError": "'{0}' के लिए इंस्टॉलेशन त्रुटि। त्रुटि कोड: {1}",
+  "Progress_WinGet_Error_ManifestError": "'{0}' के लिए पैकेज मैनिफेस्ट त्रुटि।",
+  "Progress_WinGet_Error_NoApplicableInstallers": "इस सिस्टम पर '{0}' के लिए कोई उपयुक्त इंस्टॉलर नहीं मिला।",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "'{0}' के लिए कोई उपयुक्त अपग्रेड नहीं मिला।",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "'{0}' के लिए पैकेज समझौते स्वीकार नहीं किए गए।",
+  "Progress_WinGet_Error_InstallFailed": "'{0}' के लिए इंस्टॉलेशन विफल। स्थिति: {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "'{0}' का अनइंस्टॉलेशन सिस्टम पॉलिसी द्वारा अवरुद्ध है।",
+  "Progress_WinGet_Error_UninstallCatalogError": "'{0}' अनइंस्टॉल करते समय कैटलॉग त्रुटि।",
+  "Progress_WinGet_Error_UninstallInternalError": "'{0}' अनइंस्टॉल करते समय आंतरिक त्रुटि।",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "'{0}' अनइंस्टॉल करने के लिए अमान्य विकल्प निर्दिष्ट किए गए।",
+  "Progress_WinGet_Error_UninstallError": "'{0}' के लिए अनइंस्टॉलेशन त्रुटि। त्रुटि कोड: {1}",
+  "Progress_WinGet_Error_UninstallFailed": "'{0}' के लिए अनइंस्टॉलेशन विफल। स्थिति: {1}",
+  "Progress_WinGet_PackageNotFound": "पैकेज '{0}' रिपॉजिटरी में नहीं मिला।",
+  "Progress_WinGet_FoundPackage": "पैकेज मिला: {0}",
+  "Progress_WinGet_PackageNotInstalled": "पैकेज '{0}' नहीं मिला या इंस्टॉल नहीं है।",
   "Progress_DeletingImageFile": "इमेज फाइल को हटाया जा रहा है...",
   "Progress_ImageFileDeleted": "इमेज फाइल सफलतापूर्वक हटा दी गई",
   "Progress_ImageFileDeletionFailed": "इमेज फाइल हटाने में विफल",
