--- a/src/Winhance.WPF/Localization/hu.json
+++ b/src/Winhance.WPF/Localization/hu.json
@@ -1381,6 +1381,38 @@
   "Progress_WinGet_AlreadyUpToDate": "A WinGet már naprakész",
   "Progress_WinGet_InstalledLatest": "A WinGet már a legújabb verzióban telepítve van",
   "Progress_WinGet_Ready": "A WinGet készen áll",
+  "Progress_Uninstalling": "Eltávolítás: {0}...",
+  "Progress_Finalizing": "Befejezés...",
+  "Progress_Processing": "Feldolgozás: {0}...",
+  "Progress_WinGet_DownloadingDependencies": "WinGet függőségek letöltése...",
+  "Progress_WinGet_DownloadingInstaller": "WinGet telepítő letöltése...",
+  "Progress_WinGet_DownloadingLicense": "Licenc letöltése...",
+  "Progress_WinGet_ExtractingDependencies": "Függőségek kicsomagolása...",
+  "Progress_WinGet_InstallingMachineWide": "WinGet telepítése (rendszerszinten)...",
+  "Progress_WinGet_InstallCancelled": "Telepítés megszakítva",
+  "Progress_WinGet_OpeningDismSession": "DISM munkamenet megnyitása...",
+  "Progress_WinGet_Provisioning": "WinGet csomag előkészítése...",
+  "Progress_WinGet_ProvisionedSuccessfully": "WinGet sikeresen előkészítve",
+  "Progress_WinGet_Error_BlockedByPolicy": "A(z) '{0}' telepítését a rendszerházirend blokkolja.",
+  "Progress_WinGet_Error_CatalogError": "Katalógushiba a(z) '{0}' telepítésekor. Kérjük, próbálja újra.",
+  "Progress_WinGet_Error_InternalError": "Belső hiba a(z) '{0}' telepítésekor. Kérjük, próbálja újra.",
+  "Progress_WinGet_Error_InvalidOptions": "Érvénytelen beállítások a(z) '{0}' telepítéséhez.",
+  "Progress_WinGet_Error_DownloadError": "Letöltési hiba a(z) '{0}' telepítésekor. Ellenőrizze az internetkapcsolatot.",
+  "Progress_WinGet_Error_InstallError": "Telepítési hiba: '{0}'. Hibakód: {1}",
+  "Progress_WinGet_Error_ManifestError": "Csomagmanifeszt hiba: '{0}'.",
+  "Progress_WinGet_Error_NoApplicableInstallers": "Nem található alkalmazható telepítő a(z) '{0}' számára ezen a rendszeren.",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "Nem található alkalmazható frissítés a(z) '{0}' számára.",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "A csomag megállapodásai nincsenek elfogadva: '{0}'.",
+  "Progress_WinGet_Error_InstallFailed": "A telepítés sikertelen: '{0}'. Állapot: {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "A(z) '{0}' eltávolítását a rendszerházirend blokkolja.",
+  "Progress_WinGet_Error_UninstallCatalogError": "Katalógushiba a(z) '{0}' eltávolításakor.",
+  "Progress_WinGet_Error_UninstallInternalError": "Belső hiba a(z) '{0}' eltávolításakor.",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "Érvénytelen beállítások a(z) '{0}' eltávolításához.",
+  "Progress_WinGet_Error_UninstallError": "Eltávolítási hiba: '{0}'. Hibakód: {1}",
+  "Progress_WinGet_Error_UninstallFailed": "Az eltávolítás sikertelen: '{0}'. Állapot: {1}",
+  "Progress_WinGet_PackageNotFound": "A(z) '{0}' csomag nem található a tárolókban.",
+  "Progress_WinGet_FoundPackage": "Csomag megtalálva: {0}",
+  "Progress_WinGet_PackageNotInstalled": "A(z) '{0}' csomag nem található vagy nincs telepítve.",
   "Progress_DeletingImageFile": "Képfájl törlése...",
   "Progress_ImageFileDeleted": "A kép fájl sikeresen törölve",
   "Progress_ImageFileDeletionFailed": "Nem sikerült törölni a képfájlt",
