--- a/src/Winhance.WPF/Localization/it.json
+++ b/src/Winhance.WPF/Localization/it.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "WinGet è già aggiornato",
   "Progress_WinGet_InstalledLatest": "WinGet è già installato all'ultima versione",
   "Progress_WinGet_Ready": "WinGet è pronto",
+  "Progress_Uninstalling": "Disinstallazione di {0}...",
+  "Progress_Finalizing": "Finalizzazione...",
+  "Progress_Processing": "Elaborazione di {0}...",
+  "Progress_WinGet_DownloadingDependencies": "Download delle dipendenze WinGet...",
+  "Progress_WinGet_DownloadingInstaller": "Download del programma di installazione WinGet...",
+  "Progress_WinGet_DownloadingLicense": "Download della licenza...",
+  "Progress_WinGet_ExtractingDependencies": "Estrazione delle dipendenze...",
+  "Progress_WinGet_InstallingMachineWide": "Installazione di WinGet (a livello di sistema)...",
+  "Progress_WinGet_InstallCancelled": "Installazione annullata",
+  "Progress_WinGet_OpeningDismSession": "Apertura sessione DISM...",
+  "Progress_WinGet_Provisioning": "Provisioning del pacchetto WinGet...",
+  "Progress_WinGet_ProvisionedSuccessfully": "WinGet fornito correttamente",
+  "Progress_WinGet_Error_BlockedByPolicy": "L'installazione di '{0}' è bloccata dai criteri di sistema.",
+  "Progress_WinGet_Error_CatalogError": "Errore del catalogo durante l'installazione di '{0}'. Riprovare.",
+  "Progress_WinGet_Error_InternalError": "Errore interno durante l'installazione di '{0}'. Riprovare.",
+  "Progress_WinGet_Error_InvalidOptions": "Opzioni non valide specificate per l'installazione di '{0}'.",
+  "Progress_WinGet_Error_DownloadError": "Errore di download durante l'installazione di '{0}'. Verificare la connessione Internet.",
+  "Progress_WinGet_Error_InstallError": "Errore di installazione per '{0}'. Codice errore: {1}",
+  "Progress_WinGet_Error_ManifestError": "Errore del manifesto del pacchetto per '{0}'.",
+  "Progress_WinGet_Error_NoApplicableInstallers": "Nessun programma di installazione applicabile trovato per '{0}' su questo sistema.",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "Nessun aggiornamento applicabile trovato per '{0}'.",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "Accordi del pacchetto non accettati per '{0}'.",
+  "Progress_WinGet_Error_InstallFailed": "Installazione non riuscita per '{0}'. Stato: {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "La disinstallazione di '{0}' è bloccata dai criteri di sistema.",
+  "Progress_WinGet_Error_UninstallCatalogError": "Errore del catalogo durante la disinstallazione di '{0}'.",
+  "Progress_WinGet_Error_UninstallInternalError": "Errore interno durante la disinstallazione di '{0}'.",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "Opzioni non valide specificate per la disinstallazione di '{0}'.",
+  "Progress_WinGet_Error_UninstallError": "Errore di disinstallazione per '{0}'. Codice errore: {1}",
+  "Progress_WinGet_Error_UninstallFailed": "Disinstallazione non riuscita per '{0}'. Stato: {1}",
+  "Progress_WinGet_PackageNotFound": "Pacchetto '{0}' non trovato nei repository.",
+  "Progress_WinGet_FoundPackage": "Pacchetto trovato: {0}",
+  "Progress_WinGet_PackageNotInstalled": "Pacchetto '{0}' non trovato o non installato.",
   "Progress_DeletingImageFile": "Eliminazione file immagine...",
   "Progress_ImageFileDeleted": "File immagine eliminato correttamente",
   "Progress_ImageFileDeletionFailed": "Eliminazione file immagine non riuscita",
