--- a/src/Winhance.WPF/Localization/ja.json
+++ b/src/Winhance.WPF/Localization/ja.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "WinGet はすでに最新の状態です",
   "Progress_WinGet_InstalledLatest": "WinGet はすでに最新バージョンがインストールされています",
   "Progress_WinGet_Ready": "WinGet の準備ができました",
+  "Progress_Uninstalling": "{0} をアンインストールしています...",
+  "Progress_Finalizing": "完了しています...",
+  "Progress_Processing": "{0} を処理しています...",
+  "Progress_WinGet_DownloadingDependencies": "WinGet の依存関係をダウンロードしています...",
+  "Progress_WinGet_DownloadingInstaller": "WinGet インストーラーをダウンロードしています...",
+  "Progress_WinGet_DownloadingLicense": "ライセンスをダウンロードしています...",
+  "Progress_WinGet_ExtractingDependencies": "依存関係を展開しています...",
+  "Progress_WinGet_InstallingMachineWide": "WinGet をインストールしています（システム全体）...",
+  "Progress_WinGet_InstallCancelled": "インストールがキャンセルされました",
+  "Progress_WinGet_OpeningDismSession": "DISM セッションを開いています...",
+  "Progress_WinGet_Provisioning": "WinGet パッケージをプロビジョニングしています...",
+  "Progress_WinGet_ProvisionedSuccessfully": "WinGet のプロビジョニングが完了しました",
+  "Progress_WinGet_Error_BlockedByPolicy": "'{0}' のインストールはシステムポリシーによってブロックされています。",
+  "Progress_WinGet_Error_CatalogError": "'{0}' のインストール中にカタログエラーが発生しました。もう一度お試しください。",
+  "Progress_WinGet_Error_InternalError": "'{0}' のインストール中に内部エラーが発生しました。もう一度お試しください。",
+  "Progress_WinGet_Error_InvalidOptions": "'{0}' のインストールに無効なオプションが指定されました。",
+  "Progress_WinGet_Error_DownloadError": "'{0}' のインストール中にダウンロードエラーが発生しました。インターネット接続を確認してください。",
+  "Progress_WinGet_Error_InstallError": "'{0}' のインストールエラー。エラーコード: {1}",
+  "Progress_WinGet_Error_ManifestError": "'{0}' のパッケージマニフェストエラー。",
+  "Progress_WinGet_Error_NoApplicableInstallers": "このシステムで '{0}' に適用可能なインストーラーが見つかりませんでした。",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "'{0}' に適用可能なアップグレードが見つかりませんでした。",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "'{0}' のパッケージ契約が承諾されていません。",
+  "Progress_WinGet_Error_InstallFailed": "'{0}' のインストールに失敗しました。ステータス: {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "'{0}' のアンインストールはシステムポリシーによってブロックされています。",
+  "Progress_WinGet_Error_UninstallCatalogError": "'{0}' のアンインストール中にカタログエラーが発生しました。",
+  "Progress_WinGet_Error_UninstallInternalError": "'{0}' のアンインストール中に内部エラーが発生しました。",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "'{0}' のアンインストールに無効なオプションが指定されました。",
+  "Progress_WinGet_Error_UninstallError": "'{0}' のアンインストールエラー。エラーコード: {1}",
+  "Progress_WinGet_Error_UninstallFailed": "'{0}' のアンインストールに失敗しました。ステータス: {1}",
+  "Progress_WinGet_PackageNotFound": "パッケージ '{0}' はリポジトリに見つかりませんでした。",
+  "Progress_WinGet_FoundPackage": "パッケージが見つかりました: {0}",
+  "Progress_WinGet_PackageNotInstalled": "パッケージ '{0}' が見つからないか、インストールされていません。",
   "Progress_DeletingImageFile": "イメージファイルを削除しています...",
   "Progress_ImageFileDeleted": "イメージファイルが正常に削除されました",
   "Progress_ImageFileDeletionFailed": "イメージファイルの削除に失敗しました",
