--- a/src/Winhance.WPF/Localization/lt.json
+++ b/src/Winhance.WPF/Localization/lt.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "„WinGet“ jau yra naujausios versijos",
   "Progress_WinGet_InstalledLatest": "„WinGet“ jau įdiegtas su naujausia versija",
   "Progress_WinGet_Ready": "„WinGet“ paruoštas",
+  "Progress_Uninstalling": "Šalinama {0}...",
+  "Progress_Finalizing": "Baigiama...",
+  "Progress_Processing": "Apdorojama {0}...",
+  "Progress_WinGet_DownloadingDependencies": "Atsisiunčiamos „WinGet“ priklausomybės...",
+  "Progress_WinGet_DownloadingInstaller": "Atsisiunčiamas „WinGet“ diegimo programa...",
+  "Progress_WinGet_DownloadingLicense": "Atsisiunčiama licencija...",
+  "Progress_WinGet_ExtractingDependencies": "Išskleidžiamos priklausomybės...",
+  "Progress_WinGet_InstallingMachineWide": "Diegiama „WinGet“ (visai sistemai)...",
+  "Progress_WinGet_InstallCancelled": "Diegimas atšauktas",
+  "Progress_WinGet_OpeningDismSession": "Atidaroma DISM sesija...",
+  "Progress_WinGet_Provisioning": "Ruošiamas „WinGet“ paketas...",
+  "Progress_WinGet_ProvisionedSuccessfully": "„WinGet“ sėkmingai paruoštas",
+  "Progress_WinGet_Error_BlockedByPolicy": "„{0}“ diegimas užblokuotas sistemos politikos.",
+  "Progress_WinGet_Error_CatalogError": "Katalogo klaida diegiant „{0}“. Bandykite dar kartą.",
+  "Progress_WinGet_Error_InternalError": "Vidinė klaida diegiant „{0}“. Bandykite dar kartą.",
+  "Progress_WinGet_Error_InvalidOptions": "Nurodytos netinkamos parinktys diegiant „{0}“.",
+  "Progress_WinGet_Error_DownloadError": "Atsisiuntimo klaida diegiant „{0}“. Patikrinkite interneto ryšį.",
+  "Progress_WinGet_Error_InstallError": "Diegimo klaida „{0}“. Klaidos kodas: {1}",
+  "Progress_WinGet_Error_ManifestError": "Paketo manifesto klaida „{0}“.",
+  "Progress_WinGet_Error_NoApplicableInstallers": "Nerasta tinkamų diegimo programų „{0}“ šioje sistemoje.",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "Nerasta tinkamo atnaujinimo „{0}“.",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "Paketo sutartys nepriimtos „{0}“.",
+  "Progress_WinGet_Error_InstallFailed": "Diegimas nepavyko „{0}“. Būsena: {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "„{0}“ pašalinimas užblokuotas sistemos politikos.",
+  "Progress_WinGet_Error_UninstallCatalogError": "Katalogo klaida šalinant „{0}“.",
+  "Progress_WinGet_Error_UninstallInternalError": "Vidinė klaida šalinant „{0}“.",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "Nurodytos netinkamos parinktys šalinant „{0}“.",
+  "Progress_WinGet_Error_UninstallError": "Pašalinimo klaida „{0}“. Klaidos kodas: {1}",
+  "Progress_WinGet_Error_UninstallFailed": "Pašalinimas nepavyko „{0}“. Būsena: {1}",
+  "Progress_WinGet_PackageNotFound": "Paketas „{0}“ nerastas saugyklose.",
+  "Progress_WinGet_FoundPackage": "Rastas paketas: {0}",
+  "Progress_WinGet_PackageNotInstalled": "Paketas „{0}“ nerastas arba neįdiegtas.",
   "Progress_DeletingImageFile": "Trinamas atvaizdo failas...",
   "Progress_ImageFileDeleted": "Atvaizdo failas sėkmingai ištrintas",
   "Progress_ImageFileDeletionFailed": "Nepavyko ištrinti atvaizdo failo",
