--- a/src/Winhance.WPF/Localization/lv.json
+++ b/src/Winhance.WPF/Localization/lv.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "„WinGet“ jau ir atjaunināts",
   "Progress_WinGet_InstalledLatest": "„WinGet“ jau ir instalēta jaunākā versija",
   "Progress_WinGet_Ready": "„WinGet“ ir gatavs",
+  "Progress_Uninstalling": "Atinstalē {0}...",
+  "Progress_Finalizing": "Pabeidz...",
+  "Progress_Processing": "Apstrādā {0}...",
+  "Progress_WinGet_DownloadingDependencies": "Lejupielādē „WinGet“ atkarības...",
+  "Progress_WinGet_DownloadingInstaller": "Lejupielādē „WinGet“ instalētāju...",
+  "Progress_WinGet_DownloadingLicense": "Lejupielādē licenci...",
+  "Progress_WinGet_ExtractingDependencies": "Izvelk atkarības...",
+  "Progress_WinGet_InstallingMachineWide": "Instalē „WinGet“ (visai sistēmai)...",
+  "Progress_WinGet_InstallCancelled": "Instalācija atcelta",
+  "Progress_WinGet_OpeningDismSession": "Atver DISM sesiju...",
+  "Progress_WinGet_Provisioning": "Nodrošina „WinGet“ pakotni...",
+  "Progress_WinGet_ProvisionedSuccessfully": "„WinGet“ veiksmīgi nodrošināts",
+  "Progress_WinGet_Error_BlockedByPolicy": "„{0}“ instalācija ir bloķēta sistēmas politikas dēļ.",
+  "Progress_WinGet_Error_CatalogError": "Kataloga kļūda, instalējot „{0}“. Lūdzu, mēģiniet vēlreiz.",
+  "Progress_WinGet_Error_InternalError": "Iekšēja kļūda, instalējot „{0}“. Lūdzu, mēģiniet vēlreiz.",
+  "Progress_WinGet_Error_InvalidOptions": "Norādītas nederīgas opcijas „{0}“ instalēšanai.",
+  "Progress_WinGet_Error_DownloadError": "Lejupielādes kļūda, instalējot „{0}“. Pārbaudiet interneta savienojumu.",
+  "Progress_WinGet_Error_InstallError": "Instalācijas kļūda „{0}“. Kļūdas kods: {1}",
+  "Progress_WinGet_Error_ManifestError": "Pakotnes manifesta kļūda „{0}“.",
+  "Progress_WinGet_Error_NoApplicableInstallers": "Nav atrasts piemērots instalētājs „{0}“ šajā sistēmā.",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "Nav atrasts piemērots jauninājums „{0}“.",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "Pakotnes līgumi nav pieņemti „{0}“.",
+  "Progress_WinGet_Error_InstallFailed": "Instalācija neizdevās „{0}“. Statuss: {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "„{0}“ atinstalēšana ir bloķēta sistēmas politikas dēļ.",
+  "Progress_WinGet_Error_UninstallCatalogError": "Kataloga kļūda, atinstalējot „{0}“.",
+  "Progress_WinGet_Error_UninstallInternalError": "Iekšēja kļūda, atinstalējot „{0}“.",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "Norādītas nederīgas opcijas „{0}“ atinstalēšanai.",
+  "Progress_WinGet_Error_UninstallError": "Atinstalēšanas kļūda „{0}“. Kļūdas kods: {1}",
+  "Progress_WinGet_Error_UninstallFailed": "Atinstalēšana neizdevās „{0}“. Statuss: {1}",
+  "Progress_WinGet_PackageNotFound": "Pakotne „{0}“ nav atrasta krātuvēs.",
+  "Progress_WinGet_FoundPackage": "Atrasta pakotne: {0}",
+  "Progress_WinGet_PackageNotInstalled": "Pakotne „{0}“ nav atrasta vai nav instalēta.",
   "Progress_DeletingImageFile": "Dzēš attēla failu...",
   "Progress_ImageFileDeleted": "Attēla fails veiksmīgi izdzēsts",
   "Progress_ImageFileDeletionFailed": "Neizdevās izdzēst attēla failu",
