--- a/src/Winhance.WPF/Localization/nl.json
+++ b/src/Winhance.WPF/Localization/nl.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "WinGet is al up-to-date",
   "Progress_WinGet_InstalledLatest": "WinGet is al geïnstalleerd in de nieuwste versie",
   "Progress_WinGet_Ready": "WinGet is gereed",
+  "Progress_Uninstalling": "Verwijderen van {0}...",
+  "Progress_Finalizing": "Afronden...",
+  "Progress_Processing": "Verwerken van {0}...",
+  "Progress_WinGet_DownloadingDependencies": "WinGet-afhankelijkheden downloaden...",
+  "Progress_WinGet_DownloadingInstaller": "WinGet-installatieprogramma downloaden...",
+  "Progress_WinGet_DownloadingLicense": "Licentie downloaden...",
+  "Progress_WinGet_ExtractingDependencies": "Afhankelijkheden uitpakken...",
+  "Progress_WinGet_InstallingMachineWide": "WinGet installeren (systeembreed)...",
+  "Progress_WinGet_InstallCancelled": "Installatie geannuleerd",
+  "Progress_WinGet_OpeningDismSession": "DISM-sessie openen...",
+  "Progress_WinGet_Provisioning": "WinGet-pakket inrichten...",
+  "Progress_WinGet_ProvisionedSuccessfully": "WinGet succesvol ingericht",
+  "Progress_WinGet_Error_BlockedByPolicy": "Installatie van '{0}' is geblokkeerd door systeembeleid.",
+  "Progress_WinGet_Error_CatalogError": "Catalogusfout bij installatie van '{0}'. Probeer het opnieuw.",
+  "Progress_WinGet_Error_InternalError": "Interne fout bij installatie van '{0}'. Probeer het opnieuw.",
+  "Progress_WinGet_Error_InvalidOptions": "Ongeldige opties opgegeven voor installatie van '{0}'.",
+  "Progress_WinGet_Error_DownloadError": "Downloadfout bij installatie van '{0}'. Controleer uw internetverbinding.",
+  "Progress_WinGet_Error_InstallError": "Installatiefout voor '{0}'. Foutcode: {1}",
+  "Progress_WinGet_Error_ManifestError": "Pakketmanifestfout voor '{0}'.",
+  "Progress_WinGet_Error_NoApplicableInstallers": "Geen geschikte installatieprogramma's gevonden voor '{0}' op dit systeem.",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "Geen geschikte upgrade gevonden voor '{0}'.",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "Pakketovereenkomsten niet geaccepteerd voor '{0}'.",
+  "Progress_WinGet_Error_InstallFailed": "Installatie mislukt voor '{0}'. Status: {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "Verwijdering van '{0}' is geblokkeerd door systeembeleid.",
+  "Progress_WinGet_Error_UninstallCatalogError": "Catalogusfout bij verwijdering van '{0}'.",
+  "Progress_WinGet_Error_UninstallInternalError": "Interne fout bij verwijdering van '{0}'.",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "Ongeldige opties opgegeven voor verwijdering van '{0}'.",
+  "Progress_WinGet_Error_UninstallError": "Verwijderingsfout voor '{0}'. Foutcode: {1}",
+  "Progress_WinGet_Error_UninstallFailed": "Verwijdering mislukt voor '{0}'. Status: {1}",
+  "Progress_WinGet_PackageNotFound": "Pakket '{0}' niet gevonden in repositories.",
+  "Progress_WinGet_FoundPackage": "Pakket gevonden: {0}",
+  "Progress_WinGet_PackageNotInstalled": "Pakket '{0}' niet gevonden of niet geïnstalleerd.",
   "Progress_DeletingImageFile": "Bestand van de afbeelding verwijderen...",
   "Progress_ImageFileDeleted": "Beeldbestand succesvol verwijderd",
   "Progress_ImageFileDeletionFailed": "Verwijderen van beeldbestand mislukt",
