--- a/src/Winhance.WPF/Localization/pl.json
+++ b/src/Winhance.WPF/Localization/pl.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "WinGet jest już aktualny",
   "Progress_WinGet_InstalledLatest": "WinGet jest już zainstalowany w najnowszej wersji",
   "Progress_WinGet_Ready": "WinGet jest gotowy",
+  "Progress_Uninstalling": "Odinstalowywanie {0}...",
+  "Progress_Finalizing": "Finalizowanie...",
+  "Progress_Processing": "Przetwarzanie {0}...",
+  "Progress_WinGet_DownloadingDependencies": "Pobieranie zależności WinGet...",
+  "Progress_WinGet_DownloadingInstaller": "Pobieranie instalatora WinGet...",
+  "Progress_WinGet_DownloadingLicense": "Pobieranie licencji...",
+  "Progress_WinGet_ExtractingDependencies": "Wypakowywanie zależności...",
+  "Progress_WinGet_InstallingMachineWide": "Instalowanie WinGet (dla całego systemu)...",
+  "Progress_WinGet_InstallCancelled": "Instalacja anulowana",
+  "Progress_WinGet_OpeningDismSession": "Otwieranie sesji DISM...",
+  "Progress_WinGet_Provisioning": "Udostępnianie pakietu WinGet...",
+  "Progress_WinGet_ProvisionedSuccessfully": "WinGet pomyślnie udostępniony",
+  "Progress_WinGet_Error_BlockedByPolicy": "Instalacja '{0}' jest zablokowana przez zasady systemowe.",
+  "Progress_WinGet_Error_CatalogError": "Błąd katalogu podczas instalacji '{0}'. Spróbuj ponownie.",
+  "Progress_WinGet_Error_InternalError": "Błąd wewnętrzny podczas instalacji '{0}'. Spróbuj ponownie.",
+  "Progress_WinGet_Error_InvalidOptions": "Określono nieprawidłowe opcje dla instalacji '{0}'.",
+  "Progress_WinGet_Error_DownloadError": "Błąd pobierania podczas instalacji '{0}'. Sprawdź połączenie internetowe.",
+  "Progress_WinGet_Error_InstallError": "Błąd instalacji '{0}'. Kod błędu: {1}",
+  "Progress_WinGet_Error_ManifestError": "Błąd manifestu pakietu '{0}'.",
+  "Progress_WinGet_Error_NoApplicableInstallers": "Nie znaleziono odpowiednich instalatorów dla '{0}' w tym systemie.",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "Nie znaleziono odpowiedniej aktualizacji dla '{0}'.",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "Umowy pakietu nie zostały zaakceptowane dla '{0}'.",
+  "Progress_WinGet_Error_InstallFailed": "Instalacja nie powiodła się dla '{0}'. Status: {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "Odinstalowanie '{0}' jest zablokowane przez zasady systemowe.",
+  "Progress_WinGet_Error_UninstallCatalogError": "Błąd katalogu podczas odinstalowywania '{0}'.",
+  "Progress_WinGet_Error_UninstallInternalError": "Błąd wewnętrzny podczas odinstalowywania '{0}'.",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "Określono nieprawidłowe opcje dla odinstalowania '{0}'.",
+  "Progress_WinGet_Error_UninstallError": "Błąd odinstalowania '{0}'. Kod błędu: {1}",
+  "Progress_WinGet_Error_UninstallFailed": "Odinstalowanie nie powiodło się dla '{0}'. Status: {1}",
+  "Progress_WinGet_PackageNotFound": "Pakiet '{0}' nie został znaleziony w repozytoriach.",
+  "Progress_WinGet_FoundPackage": "Znaleziono pakiet: {0}",
+  "Progress_WinGet_PackageNotInstalled": "Pakiet '{0}' nie został znaleziony lub nie jest zainstalowany.",
   "Progress_DeletingImageFile": "Usuwanie pliku obrazu...",
   "Progress_ImageFileDeleted": "Plik obrazu został pomyślnie usunięty",
   "Progress_ImageFileDeletionFailed": "Nie udało się usunąć pliku obrazu",
