--- a/src/Winhance.WPF/Localization/pt-BR.json
+++ b/src/Winhance.WPF/Localization/pt-BR.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "WinGet já está atualizado",
   "Progress_WinGet_InstalledLatest": "WinGet já está instalado na versão mais recente",
   "Progress_WinGet_Ready": "WinGet está pronto",
+  "Progress_Uninstalling": "Desinstalando {0}...",
+  "Progress_Finalizing": "Finalizando...",
+  "Progress_Processing": "Processando {0}...",
+  "Progress_WinGet_DownloadingDependencies": "Baixando dependências do WinGet...",
+  "Progress_WinGet_DownloadingInstaller": "Baixando instalador do WinGet...",
+  "Progress_WinGet_DownloadingLicense": "Baixando licença...",
+  "Progress_WinGet_ExtractingDependencies": "Extraindo dependências...",
+  "Progress_WinGet_InstallingMachineWide": "Instalando WinGet (em todo o sistema)...",
+  "Progress_WinGet_InstallCancelled": "Instalação cancelada",
+  "Progress_WinGet_OpeningDismSession": "Abrindo sessão DISM...",
+  "Progress_WinGet_Provisioning": "Provisionando pacote WinGet...",
+  "Progress_WinGet_ProvisionedSuccessfully": "WinGet provisionado com sucesso",
+  "Progress_WinGet_Error_BlockedByPolicy": "A instalação de '{0}' está bloqueada pela política do sistema.",
+  "Progress_WinGet_Error_CatalogError": "Erro de catálogo ao instalar '{0}'. Por favor, tente novamente.",
+  "Progress_WinGet_Error_InternalError": "Erro interno ao instalar '{0}'. Por favor, tente novamente.",
+  "Progress_WinGet_Error_InvalidOptions": "Opções inválidas especificadas para instalar '{0}'.",
+  "Progress_WinGet_Error_DownloadError": "Erro de download ao instalar '{0}'. Verifique sua conexão com a internet.",
+  "Progress_WinGet_Error_InstallError": "Erro de instalação para '{0}'. Código de erro: {1}",
+  "Progress_WinGet_Error_ManifestError": "Erro de manifesto do pacote para '{0}'.",
+  "Progress_WinGet_Error_NoApplicableInstallers": "Nenhum instalador aplicável encontrado para '{0}' neste sistema.",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "Nenhuma atualização aplicável encontrada para '{0}'.",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "Acordos do pacote não aceitos para '{0}'.",
+  "Progress_WinGet_Error_InstallFailed": "A instalação falhou para '{0}'. Status: {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "A desinstalação de '{0}' está bloqueada pela política do sistema.",
+  "Progress_WinGet_Error_UninstallCatalogError": "Erro de catálogo ao desinstalar '{0}'.",
+  "Progress_WinGet_Error_UninstallInternalError": "Erro interno ao desinstalar '{0}'.",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "Opções inválidas especificadas para desinstalar '{0}'.",
+  "Progress_WinGet_Error_UninstallError": "Erro de desinstalação para '{0}'. Código de erro: {1}",
+  "Progress_WinGet_Error_UninstallFailed": "A desinstalação falhou para '{0}'. Status: {1}",
+  "Progress_WinGet_PackageNotFound": "Pacote '{0}' não encontrado nos repositórios.",
+  "Progress_WinGet_FoundPackage": "Pacote encontrado: {0}",
+  "Progress_WinGet_PackageNotInstalled": "Pacote '{0}' não encontrado ou não instalado.",
   "Progress_DeletingImageFile": "Excluindo arquivo de imagem...",
   "Progress_ImageFileDeleted": "Arquivo de imagem excluído com sucesso",
   "Progress_ImageFileDeletionFailed": "Falha ao excluir arquivo de imagem",
