--- a/src/Winhance.WPF/Localization/ru.json
+++ b/src/Winhance.WPF/Localization/ru.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "WinGet уже обновлен",
   "Progress_WinGet_InstalledLatest": "WinGet уже установлен последней версии",
   "Progress_WinGet_Ready": "WinGet готов",
+  "Progress_Uninstalling": "Удаление {0}...",
+  "Progress_Finalizing": "Завершение...",
+  "Progress_Processing": "Обработка {0}...",
+  "Progress_WinGet_DownloadingDependencies": "Загрузка зависимостей WinGet...",
+  "Progress_WinGet_DownloadingInstaller": "Загрузка установщика WinGet...",
+  "Progress_WinGet_DownloadingLicense": "Загрузка лицензии...",
+  "Progress_WinGet_ExtractingDependencies": "Извлечение зависимостей...",
+  "Progress_WinGet_InstallingMachineWide": "Установка WinGet (для всей системы)...",
+  "Progress_WinGet_InstallCancelled": "Установка отменена",
+  "Progress_WinGet_OpeningDismSession": "Открытие сеанса DISM...",
+  "Progress_WinGet_Provisioning": "Подготовка пакета WinGet...",
+  "Progress_WinGet_ProvisionedSuccessfully": "WinGet успешно подготовлен",
+  "Progress_WinGet_Error_BlockedByPolicy": "Установка '{0}' заблокирована системной политикой.",
+  "Progress_WinGet_Error_CatalogError": "Ошибка каталога при установке '{0}'. Пожалуйста, попробуйте снова.",
+  "Progress_WinGet_Error_InternalError": "Внутренняя ошибка при установке '{0}'. Пожалуйста, попробуйте снова.",
+  "Progress_WinGet_Error_InvalidOptions": "Указаны недопустимые параметры для установки '{0}'.",
+  "Progress_WinGet_Error_DownloadError": "Ошибка загрузки при установке '{0}'. Проверьте подключение к Интернету.",
+  "Progress_WinGet_Error_InstallError": "Ошибка установки '{0}'. Код ошибки: {1}",
+  "Progress_WinGet_Error_ManifestError": "Ошибка манифеста пакета '{0}'.",
+  "Progress_WinGet_Error_NoApplicableInstallers": "Не найдено подходящих установщиков для '{0}' в этой системе.",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "Не найдено подходящего обновления для '{0}'.",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "Соглашения пакета не приняты для '{0}'.",
+  "Progress_WinGet_Error_InstallFailed": "Установка не удалась для '{0}'. Статус: {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "Удаление '{0}' заблокировано системной политикой.",
+  "Progress_WinGet_Error_UninstallCatalogError": "Ошибка каталога при удалении '{0}'.",
+  "Progress_WinGet_Error_UninstallInternalError": "Внутренняя ошибка при удалении '{0}'.",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "Указаны недопустимые параметры для удаления '{0}'.",
+  "Progress_WinGet_Error_UninstallError": "Ошибка удаления '{0}'. Код ошибки: {1}",
+  "Progress_WinGet_Error_UninstallFailed": "Удаление не удалось для '{0}'. Статус: {1}",
+  "Progress_WinGet_PackageNotFound": "Пакет '{0}' не найден в репозиториях.",
+  "Progress_WinGet_FoundPackage": "Найден пакет: {0}",
+  "Progress_WinGet_PackageNotInstalled": "Пакет '{0}' не найден или не установлен.",
   "Progress_DeletingImageFile": "Удаление файла образа...",
   "Progress_ImageFileDeleted": "Файл образа успешно удален",
   "Progress_ImageFileDeletionFailed": "Не удалось удалить файл образа",
