--- a/src/Winhance.WPF/Localization/sv.json
+++ b/src/Winhance.WPF/Localization/sv.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "WinGet är redan uppdaterat",
   "Progress_WinGet_InstalledLatest": "WinGet är redan installerat i den senaste versionen",
   "Progress_WinGet_Ready": "WinGet är redo",
+  "Progress_Uninstalling": "Avinstallerar {0}...",
+  "Progress_Finalizing": "Slutför...",
+  "Progress_Processing": "Bearbetar {0}...",
+  "Progress_WinGet_DownloadingDependencies": "Hämtar WinGet-beroenden...",
+  "Progress_WinGet_DownloadingInstaller": "Hämtar WinGet-installationsprogram...",
+  "Progress_WinGet_DownloadingLicense": "Hämtar licens...",
+  "Progress_WinGet_ExtractingDependencies": "Extraherar beroenden...",
+  "Progress_WinGet_InstallingMachineWide": "Installerar WinGet (systemomfattande)...",
+  "Progress_WinGet_InstallCancelled": "Installationen avbröts",
+  "Progress_WinGet_OpeningDismSession": "Öppnar DISM-session...",
+  "Progress_WinGet_Provisioning": "Etablerar WinGet-paket...",
+  "Progress_WinGet_ProvisionedSuccessfully": "WinGet etablerat framgångsrikt",
+  "Progress_WinGet_Error_BlockedByPolicy": "Installation av '{0}' blockeras av systemprincip.",
+  "Progress_WinGet_Error_CatalogError": "Katalogfel vid installation av '{0}'. Försök igen.",
+  "Progress_WinGet_Error_InternalError": "Internt fel vid installation av '{0}'. Försök igen.",
+  "Progress_WinGet_Error_InvalidOptions": "Ogiltiga alternativ angivna för installation av '{0}'.",
+  "Progress_WinGet_Error_DownloadError": "Nedladdningsfel vid installation av '{0}'. Kontrollera din internetanslutning.",
+  "Progress_WinGet_Error_InstallError": "Installationsfel för '{0}'. Felkod: {1}",
+  "Progress_WinGet_Error_ManifestError": "Paketmanifestfel för '{0}'.",
+  "Progress_WinGet_Error_NoApplicableInstallers": "Inga tillämpliga installationsprogram hittades för '{0}' på detta system.",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "Ingen tillämplig uppgradering hittades för '{0}'.",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "Paketavtal inte accepterade för '{0}'.",
+  "Progress_WinGet_Error_InstallFailed": "Installationen misslyckades för '{0}'. Status: {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "Avinstallation av '{0}' blockeras av systemprincip.",
+  "Progress_WinGet_Error_UninstallCatalogError": "Katalogfel vid avinstallation av '{0}'.",
+  "Progress_WinGet_Error_UninstallInternalError": "Internt fel vid avinstallation av '{0}'.",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "Ogiltiga alternativ angivna för avinstallation av '{0}'.",
+  "Progress_WinGet_Error_UninstallError": "Avinstallationsfel för '{0}'. Felkod: {1}",
+  "Progress_WinGet_Error_UninstallFailed": "Avinstallationen misslyckades för '{0}'. Status: {1}",
+  "Progress_WinGet_PackageNotFound": "Paketet '{0}' hittades inte i förråden.",
+  "Progress_WinGet_FoundPackage": "Paket hittat: {0}",
+  "Progress_WinGet_PackageNotInstalled": "Paketet '{0}' hittades inte eller är inte installerat.",
   "Progress_DeletingImageFile": "Tar bort bildfil...",
   "Progress_ImageFileDeleted": "Bildfilen har tagits bort",
   "Progress_ImageFileDeletionFailed": "Misslyckades med att ta bort bildfilen",
