--- a/src/Winhance.WPF/Localization/uk.json
+++ b/src/Winhance.WPF/Localization/uk.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "WinGet уже оновлено",
   "Progress_WinGet_InstalledLatest": "WinGet вже встановлено останньої версії",
   "Progress_WinGet_Ready": "WinGet готовий",
+  "Progress_Uninstalling": "Видалення {0}...",
+  "Progress_Finalizing": "Завершення...",
+  "Progress_Processing": "Обробка {0}...",
+  "Progress_WinGet_DownloadingDependencies": "Завантаження залежностей WinGet...",
+  "Progress_WinGet_DownloadingInstaller": "Завантаження інсталятора WinGet...",
+  "Progress_WinGet_DownloadingLicense": "Завантаження ліцензії...",
+  "Progress_WinGet_ExtractingDependencies": "Розпакування залежностей...",
+  "Progress_WinGet_InstallingMachineWide": "Встановлення WinGet (для всієї системи)...",
+  "Progress_WinGet_InstallCancelled": "Встановлення скасовано",
+  "Progress_WinGet_OpeningDismSession": "Відкриття сеансу DISM...",
+  "Progress_WinGet_Provisioning": "Підготовка пакету WinGet...",
+  "Progress_WinGet_ProvisionedSuccessfully": "WinGet успішно підготовлено",
+  "Progress_WinGet_Error_BlockedByPolicy": "Встановлення '{0}' заблоковано системною політикою.",
+  "Progress_WinGet_Error_CatalogError": "Помилка каталогу під час встановлення '{0}'. Будь ласка, спробуйте ще раз.",
+  "Progress_WinGet_Error_InternalError": "Внутрішня помилка під час встановлення '{0}'. Будь ласка, спробуйте ще раз.",
+  "Progress_WinGet_Error_InvalidOptions": "Вказано недійсні параметри для встановлення '{0}'.",
+  "Progress_WinGet_Error_DownloadError": "Помилка завантаження під час встановлення '{0}'. Перевірте підключення до Інтернету.",
+  "Progress_WinGet_Error_InstallError": "Помилка встановлення '{0}'. Код помилки: {1}",
+  "Progress_WinGet_Error_ManifestError": "Помилка маніфесту пакету '{0}'.",
+  "Progress_WinGet_Error_NoApplicableInstallers": "Не знайдено відповідних інсталяторів для '{0}' у цій системі.",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "Не знайдено відповідного оновлення для '{0}'.",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "Угоди пакету не прийняті для '{0}'.",
+  "Progress_WinGet_Error_InstallFailed": "Встановлення не вдалося для '{0}'. Статус: {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "Видалення '{0}' заблоковано системною політикою.",
+  "Progress_WinGet_Error_UninstallCatalogError": "Помилка каталогу під час видалення '{0}'.",
+  "Progress_WinGet_Error_UninstallInternalError": "Внутрішня помилка під час видалення '{0}'.",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "Вказано недійсні параметри для видалення '{0}'.",
+  "Progress_WinGet_Error_UninstallError": "Помилка видалення '{0}'. Код помилки: {1}",
+  "Progress_WinGet_Error_UninstallFailed": "Видалення не вдалося для '{0}'. Статус: {1}",
+  "Progress_WinGet_PackageNotFound": "Пакет '{0}' не знайдено в репозиторіях.",
+  "Progress_WinGet_FoundPackage": "Знайдено пакет: {0}",
+  "Progress_WinGet_PackageNotInstalled": "Пакет '{0}' не знайдено або не встановлено.",
   "Progress_DeletingImageFile": "Видалення файлу образу...",
   "Progress_ImageFileDeleted": "Файл образу успішно видалено",
   "Progress_ImageFileDeletionFailed": "Не вдалося видалити файл образу",
