--- a/src/Winhance.WPF/Localization/vi.json
+++ b/src/Winhance.WPF/Localization/vi.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "WinGet đã được cập nhật",
   "Progress_WinGet_InstalledLatest": "WinGet đã được cài đặt ở phiên bản mới nhất",
   "Progress_WinGet_Ready": "WinGet đã sẵn sàng",
+  "Progress_Uninstalling": "Đang gỡ cài đặt {0}...",
+  "Progress_Finalizing": "Đang hoàn tất...",
+  "Progress_Processing": "Đang xử lý {0}...",
+  "Progress_WinGet_DownloadingDependencies": "Đang tải các phụ thuộc WinGet...",
+  "Progress_WinGet_DownloadingInstaller": "Đang tải trình cài đặt WinGet...",
+  "Progress_WinGet_DownloadingLicense": "Đang tải giấy phép...",
+  "Progress_WinGet_ExtractingDependencies": "Đang giải nén các phụ thuộc...",
+  "Progress_WinGet_InstallingMachineWide": "Đang cài đặt WinGet (toàn hệ thống)...",
+  "Progress_WinGet_InstallCancelled": "Đã hủy cài đặt",
+  "Progress_WinGet_OpeningDismSession": "Đang mở phiên DISM...",
+  "Progress_WinGet_Provisioning": "Đang cung cấp gói WinGet...",
+  "Progress_WinGet_ProvisionedSuccessfully": "WinGet đã được cung cấp thành công",
+  "Progress_WinGet_Error_BlockedByPolicy": "Cài đặt '{0}' bị chặn bởi chính sách hệ thống.",
+  "Progress_WinGet_Error_CatalogError": "Lỗi danh mục khi cài đặt '{0}'. Vui lòng thử lại.",
+  "Progress_WinGet_Error_InternalError": "Lỗi nội bộ khi cài đặt '{0}'. Vui lòng thử lại.",
+  "Progress_WinGet_Error_InvalidOptions": "Các tùy chọn không hợp lệ được chỉ định cho cài đặt '{0}'.",
+  "Progress_WinGet_Error_DownloadError": "Lỗi tải xuống khi cài đặt '{0}'. Vui lòng kiểm tra kết nối internet.",
+  "Progress_WinGet_Error_InstallError": "Lỗi cài đặt cho '{0}'. Mã lỗi: {1}",
+  "Progress_WinGet_Error_ManifestError": "Lỗi manifest gói cho '{0}'.",
+  "Progress_WinGet_Error_NoApplicableInstallers": "Không tìm thấy trình cài đặt phù hợp cho '{0}' trên hệ thống này.",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "Không tìm thấy bản nâng cấp phù hợp cho '{0}'.",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "Các thỏa thuận gói chưa được chấp nhận cho '{0}'.",
+  "Progress_WinGet_Error_InstallFailed": "Cài đặt thất bại cho '{0}'. Trạng thái: {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "Gỡ cài đặt '{0}' bị chặn bởi chính sách hệ thống.",
+  "Progress_WinGet_Error_UninstallCatalogError": "Lỗi danh mục khi gỡ cài đặt '{0}'.",
+  "Progress_WinGet_Error_UninstallInternalError": "Lỗi nội bộ khi gỡ cài đặt '{0}'.",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "Các tùy chọn không hợp lệ được chỉ định cho gỡ cài đặt '{0}'.",
+  "Progress_WinGet_Error_UninstallError": "Lỗi gỡ cài đặt cho '{0}'. Mã lỗi: {1}",
+  "Progress_WinGet_Error_UninstallFailed": "Gỡ cài đặt thất bại cho '{0}'. Trạng thái: {1}",
+  "Progress_WinGet_PackageNotFound": "Không tìm thấy gói '{0}' trong kho lưu trữ.",
+  "Progress_WinGet_FoundPackage": "Đã tìm thấy gói: {0}",
+  "Progress_WinGet_PackageNotInstalled": "Không tìm thấy gói '{0}' hoặc chưa được cài đặt.",
   "Progress_DeletingImageFile": "Đang xóa tệp hình ảnh...",
   "Progress_ImageFileDeleted": "Đã xóa tệp hình ảnh thành công",
   "Progress_ImageFileDeletionFailed": "Xóa tệp hình ảnh thất bại",
