--- a/src/Winhance.WPF/Localization/zh-Hans.json
+++ b/src/Winhance.WPF/Localization/zh-Hans.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "WinGet 已是最新版本",
   "Progress_WinGet_InstalledLatest": "WinGet 已安装最新版本",
   "Progress_WinGet_Ready": "WinGet 已就绪",
+  "Progress_Uninstalling": "正在卸载 {0}...",
+  "Progress_Finalizing": "正在完成...",
+  "Progress_Processing": "正在处理 {0}...",
+  "Progress_WinGet_DownloadingDependencies": "正在下载 WinGet 依赖项...",
+  "Progress_WinGet_DownloadingInstaller": "正在下载 WinGet 安装程序...",
+  "Progress_WinGet_DownloadingLicense": "正在下载许可证...",
+  "Progress_WinGet_ExtractingDependencies": "正在解压依赖项...",
+  "Progress_WinGet_InstallingMachineWide": "正在安装 WinGet（全系统）...",
+  "Progress_WinGet_InstallCancelled": "安装已取消",
+  "Progress_WinGet_OpeningDismSession": "正在打开 DISM 会话...",
+  "Progress_WinGet_Provisioning": "正在配置 WinGet 包...",
+  "Progress_WinGet_ProvisionedSuccessfully": "WinGet 配置成功",
+  "Progress_WinGet_Error_BlockedByPolicy": "'{0}' 的安装被系统策略阻止。",
+  "Progress_WinGet_Error_CatalogError": "安装 '{0}' 时出现目录错误。请重试。",
+  "Progress_WinGet_Error_InternalError": "安装 '{0}' 时出现内部错误。请重试。",
+  "Progress_WinGet_Error_InvalidOptions": "为安装 '{0}' 指定了无效的选项。",
+  "Progress_WinGet_Error_DownloadError": "安装 '{0}' 时出现下载错误。请检查您的网络连接。",
+  "Progress_WinGet_Error_InstallError": "'{0}' 安装错误。错误代码：{1}",
+  "Progress_WinGet_Error_ManifestError": "'{0}' 的包清单错误。",
+  "Progress_WinGet_Error_NoApplicableInstallers": "在此系统上未找到适用于 '{0}' 的安装程序。",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "未找到适用于 '{0}' 的升级。",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "'{0}' 的包协议未被接受。",
+  "Progress_WinGet_Error_InstallFailed": "'{0}' 安装失败。状态：{1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "'{0}' 的卸载被系统策略阻止。",
+  "Progress_WinGet_Error_UninstallCatalogError": "卸载 '{0}' 时出现目录错误。",
+  "Progress_WinGet_Error_UninstallInternalError": "卸载 '{0}' 时出现内部错误。",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "为卸载 '{0}' 指定了无效的选项。",
+  "Progress_WinGet_Error_UninstallError": "'{0}' 卸载错误。错误代码：{1}",
+  "Progress_WinGet_Error_UninstallFailed": "'{0}' 卸载失败。状态：{1}",
+  "Progress_WinGet_PackageNotFound": "在存储库中找不到软件包 '{0}'。",
+  "Progress_WinGet_FoundPackage": "找到软件包：{0}",
+  "Progress_WinGet_PackageNotInstalled": "软件包 '{0}' 未找到或未安装。",
   "Progress_DeletingImageFile": "正在删除映像文件...",
   "Progress_ImageFileDeleted": "映像文件删除成功",
   "Progress_ImageFileDeletionFailed": "删除映像文件失败",
