--- a/src/Winhance.WPF/Localization/zh-Hant.json
+++ b/src/Winhance.WPF/Localization/zh-Hant.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "WinGet 已是最新版本",
   "Progress_WinGet_InstalledLatest": "WinGet 已安裝最新版本",
   "Progress_WinGet_Ready": "WinGet 已就緒",
+  "Progress_Uninstalling": "正在解除安裝 {0}...",
+  "Progress_Finalizing": "正在完成...",
+  "Progress_Processing": "正在處理 {0}...",
+  "Progress_WinGet_DownloadingDependencies": "正在下載 WinGet 相依性...",
+  "Progress_WinGet_DownloadingInstaller": "正在下載 WinGet 安裝程式...",
+  "Progress_WinGet_DownloadingLicense": "正在下載授權...",
+  "Progress_WinGet_ExtractingDependencies": "正在解壓縮相依性...",
+  "Progress_WinGet_InstallingMachineWide": "正在安裝 WinGet（全系統）...",
+  "Progress_WinGet_InstallCancelled": "安裝已取消",
+  "Progress_WinGet_OpeningDismSession": "正在開啟 DISM 工作階段...",
+  "Progress_WinGet_Provisioning": "正在佈建 WinGet 套件...",
+  "Progress_WinGet_ProvisionedSuccessfully": "WinGet 佈建成功",
+  "Progress_WinGet_Error_BlockedByPolicy": "'{0}' 的安裝被系統原則封鎖。",
+  "Progress_WinGet_Error_CatalogError": "安裝 '{0}' 時發生目錄錯誤。請重試。",
+  "Progress_WinGet_Error_InternalError": "安裝 '{0}' 時發生內部錯誤。請重試。",
+  "Progress_WinGet_Error_InvalidOptions": "為安裝 '{0}' 指定了無效的選項。",
+  "Progress_WinGet_Error_DownloadError": "安裝 '{0}' 時發生下載錯誤。請檢查您的網路連線。",
+  "Progress_WinGet_Error_InstallError": "'{0}' 安裝錯誤。錯誤碼：{1}",
+  "Progress_WinGet_Error_ManifestError": "'{0}' 的套件資訊清單錯誤。",
+  "Progress_WinGet_Error_NoApplicableInstallers": "在此系統上找不到適用於 '{0}' 的安裝程式。",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "找不到適用於 '{0}' 的升級。",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "'{0}' 的套件協議未被接受。",
+  "Progress_WinGet_Error_InstallFailed": "'{0}' 安裝失敗。狀態：{1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "'{0}' 的解除安裝被系統原則封鎖。",
+  "Progress_WinGet_Error_UninstallCatalogError": "解除安裝 '{0}' 時發生目錄錯誤。",
+  "Progress_WinGet_Error_UninstallInternalError": "解除安裝 '{0}' 時發生內部錯誤。",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "為解除安裝 '{0}' 指定了無效的選項。",
+  "Progress_WinGet_Error_UninstallError": "'{0}' 解除安裝錯誤。錯誤碼：{1}",
+  "Progress_WinGet_Error_UninstallFailed": "'{0}' 解除安裝失敗。狀態：{1}",
+  "Progress_WinGet_PackageNotFound": "在存放庫中找不到套件 '{0}'。",
+  "Progress_WinGet_FoundPackage": "找到套件：{0}",
+  "Progress_WinGet_PackageNotInstalled": "套件 '{0}' 未找到或未安裝。",
   "Progress_DeletingImageFile": "正在刪除映像檔案...",
   "Progress_ImageFileDeleted": "映像檔案刪除成功",
   "Progress_ImageFileDeletionFailed": "刪除映像檔案失敗",
