--- a/src/Winhance.WPF/Localization/pt.json
+++ b/src/Winhance.WPF/Localization/pt.json
@@ -1377,6 +1377,38 @@
   "Progress_WinGet_AlreadyUpToDate": "O WinGet já está atualizado",
   "Progress_WinGet_InstalledLatest": "O WinGet já está instalado na versão mais recente",
   "Progress_WinGet_Ready": "O WinGet está pronto",
+  "Progress_Uninstalling": "A desinstalar {0}...",
+  "Progress_Finalizing": "A finalizar...",
+  "Progress_Processing": "A processar {0}...",
+  "Progress_WinGet_DownloadingDependencies": "A transferir dependências do WinGet...",
+  "Progress_WinGet_DownloadingInstaller": "A transferir instalador do WinGet...",
+  "Progress_WinGet_DownloadingLicense": "A transferir licença...",
+  "Progress_WinGet_ExtractingDependencies": "A extrair dependências...",
+  "Progress_WinGet_InstallingMachineWide": "A instalar WinGet (em todo o sistema)...",
+  "Progress_WinGet_InstallCancelled": "Instalação cancelada",
+  "Progress_WinGet_OpeningDismSession": "A abrir sessão DISM...",
+  "Progress_WinGet_Provisioning": "A aprovisionar pacote WinGet...",
+  "Progress_WinGet_ProvisionedSuccessfully": "WinGet aprovisionado com sucesso",
+  "Progress_WinGet_Error_BlockedByPolicy": "A instalação de '{0}' está bloqueada pela política do sistema.",
+  "Progress_WinGet_Error_CatalogError": "Erro de catálogo ao instalar '{0}'. Por favor, tente novamente.",
+  "Progress_WinGet_Error_InternalError": "Erro interno ao instalar '{0}'. Por favor, tente novamente.",
+  "Progress_WinGet_Error_InvalidOptions": "Opções inválidas especificadas para instalar '{0}'.",
+  "Progress_WinGet_Error_DownloadError": "Erro de transferência ao instalar '{0}'. Verifique a sua ligação à Internet.",
+  "Progress_WinGet_Error_InstallError": "Erro de instalação para '{0}'. Código de erro: {1}",
+  "Progress_WinGet_Error_ManifestError": "Erro de manifesto do pacote para '{0}'.",
+  "Progress_WinGet_Error_NoApplicableInstallers": "Nenhum instalador aplicável encontrado para '{0}' neste sistema.",
+  "Progress_WinGet_Error_NoApplicableUpgrade": "Nenhuma atualização aplicável encontrada para '{0}'.",
+  "Progress_WinGet_Error_AgreementsNotAccepted": "Acordos do pacote não aceites para '{0}'.",
+  "Progress_WinGet_Error_InstallFailed": "A instalação falhou para '{0}'. Estado: {1}",
+  "Progress_WinGet_Error_UninstallBlockedByPolicy": "A desinstalação de '{0}' está bloqueada pela política do sistema.",
+  "Progress_WinGet_Error_UninstallCatalogError": "Erro de catálogo ao desinstalar '{0}'.",
+  "Progress_WinGet_Error_UninstallInternalError": "Erro interno ao desinstalar '{0}'.",
+  "Progress_WinGet_Error_UninstallInvalidOptions": "Opções inválidas especificadas para desinstalar '{0}'.",
+  "Progress_WinGet_Error_UninstallError": "Erro de desinstalação para '{0}'. Código de erro: {1}",
+  "Progress_WinGet_Error_UninstallFailed": "A desinstalação falhou para '{0}'. Estado: {1}",
+  "Progress_WinGet_PackageNotFound": "Pacote '{0}' não encontrado nos repositórios.",
+  "Progress_WinGet_FoundPackage": "Pacote encontrado: {0}",
+  "Progress_WinGet_PackageNotInstalled": "Pacote '{0}' não encontrado ou não instalado.",
   "Progress_DeletingImageFile": "A eliminar o ficheiro de imagem...",
   "Progress_ImageFileDeleted": "Ficheiro de imagem eliminado com sucesso",
   "Progress_ImageFileDeletionFailed": "Falha ao eliminar o ficheiro de imagem",
